@@ -38,6 +38,10 @@
 <p>2018-04-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/gif.c (DecodeImage): Fix use of uninitialized memory
+during error condition in decoder. Fixes oss-fuzz 7732
+&quot;graphicsmagick/coder_GIF_fuzzer: Heap-buffer-overflow in
+DecodeImage&quot;. (Credit to OSS-Fuzz)</li>
 <li>coders/txt.c (ReadTXTImage): Assure that all image pixels are
 initialized to black.</li>
 <li>Magick++/demo/zoom.cpp (main): Add a -read-blob option to read
