@@ -1,5 +1,10 @@
 2018-04-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/gif.c (DecodeImage): Fix use of uninitialized memory
+	during error condition in decoder. Fixes oss-fuzz 7732
+	"graphicsmagick/coder_GIF_fuzzer: Heap-buffer-overflow in
+	DecodeImage". (Credit to OSS-Fuzz)
+
 	* coders/txt.c (ReadTXTImage): Assure that all image pixels are
 	initialized to black.
 
